--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV = development
+NODE_ENV = production
 PORT = 8000
 MONGO_URI=mongodb+srv://new:new@merncluster.jyiarmj.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = ADLJAdfljdlffdljlljfd
